clear_sessions_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-clearsessions
  labels:
    app: backend
spec:
  restartPolicy: OnFailure
  containers:
  - name: clear-sessions-container
    image: clear_sessions_image:0
