deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels: 
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: mycontainer
        image: myapp:idk
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
