service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30331
  type: NodePort
